Commit from TeleportHQ

--- a/components/gallery-card31.html
+++ b/components/gallery-card31.html
@@ -46,19 +46,20 @@
   <body>
     <link rel="stylesheet" href="../style.css" />
     <div>
-      <link href="./navigation-links.css" rel="stylesheet" />
-      <nav class="navigation-links-nav">
-        <a href="#about" class="navigation-links-link"><span>About</span></a>
-        <a href="#teaching" class="navigation-links-link1">
-          <span>Teaching</span>
-        </a>
-        <a href="#contact" class="navigation-links-text">
-          <span>Contact</span>
-        </a>
-        <a href="#gallery" class="navigation-links-link2">
-          <span>Gallery</span>
-        </a>
-      </nav>
+      <link href="./gallery-card31.css" rel="stylesheet" />
+      <div class="gallery-card31-gallery-card">
+        <img
+          alt="image"
+          src="https://images.unsplash.com/photo-1523755231516-e43fd2e8dca5?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDF8fG1pbmltYWxpc20lMjBjb3VjaHxlbnwwfHx8fDE2MjY0NDg1NTk&amp;ixlib=rb-1.2.1&amp;h=1000"
+          class="gallery-card31-image"
+        />
+        <div class="gallery-card31-container">
+          <h1 class="gallery-card31-text"><span>Project Title</span></h1>
+          <span class="gallery-card31-text1">
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+          </span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
