--- a/components/gallery-card31.html
+++ b/components/gallery-card31.html
@@ -53,13 +53,12 @@
           src="https://images.unsplash.com/photo-1523755231516-e43fd2e8dca5?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDF8fG1pbmltYWxpc20lMjBjb3VjaHxlbnwwfHx8fDE2MjY0NDg1NTk&amp;ixlib=rb-1.2.1&amp;h=1000"
           class="gallery-card31-image"
         />
-        <div class="gallery-card31-container">
-          <h1 class="gallery-card31-text"><span>Project Title</span></h1>
-          <span class="gallery-card31-text1">
-            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
-          </span>
-        </div>
+        <div class="gallery-card31-container"></div>
       </div>
     </div>
+    <script
+      defer=""
+      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+    ></script>
   </body>
 </html>
