--- a/components/gallery-card3.html
+++ b/components/gallery-card3.html
@@ -61,5 +61,9 @@
         </div>
       </div>
     </div>
+    <script
+      defer=""
+      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+    ></script>
   </body>
 </html>
