--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -60,5 +60,9 @@
         </a>
       </nav>
     </div>
+    <script
+      defer=""
+      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+    ></script>
   </body>
 </html>
