--- a/index.css
+++ b/index.css
@@ -1,54 +1,3 @@
-.gallery-card31-gallery-card {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  position: relative;
-  align-items: flex-start;
-  flex-direction: column;
-  justify-content: center;
-}
-.gallery-card31-image {
-  top: 0px;
-  left: 0px;
-  right: auto;
-  width: 100%;
-  bottom: auto;
-  height: 100%;
-  position: absolute;
-  object-fit: cover;
-}
-.gallery-card31-container {
-  width: 100%;
-  border: 2px dashed rgba(120, 120, 120, 0.4);
-  height: 300px;
-  display: flex;
-  opacity: 0;
-  padding: var(--dl-space-space-twounits);
-  z-index: 1;
-  align-self: center;
-  transition: 0.3s;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0.9));;
-}
-.gallery-card31-container:hover {
-  opacity: 1;
-}
-.gallery-card31-root-class-name {
-  width: auto;
-  height: 40vh;
-}
-.gallery-card31-root-class-name1 {
-  width: 100%;
-}
-.gallery-card31-root-class-name2 {
-  height: 40vh;
-}
-
-
-
-
 .home-container {
   width: 100%;
   display: flex;
@@ -118,13 +67,6 @@
   text-transform: uppercase;
   text-decoration: none;
 }
-.home-link03 {
-  font-size: 12px;
-  font-family: Avenir LT Std 45 Book;
-  margin-left: var(--dl-space-space-twounits);
-  text-transform: uppercase;
-  text-decoration: none;
-}
 .home-burger-menu {
   display: none;
 }
@@ -156,8 +98,14 @@
   width: 100%;
   display: flex;
   align-items: center;
-  margin-bottom: var(--dl-space-space-threeunits);
+  border-color: var(--dl-color-gray-black);
+  border-width: 1px;
+  margin-bottom: var(--dl-space-space-halfunit);
   justify-content: space-between;
+  border-top-width: 0px;
+  border-left-width: 0px;
+  border-right-width: 0px;
+  border-bottom-width: 0.5px;
 }
 .home-text01 {
   font-size: 34px;
@@ -184,21 +132,18 @@
   display: flex;
   align-self: flex-start;
   align-items: flex-start;
+  padding-top: var(--dl-space-space-twounits);
   flex-direction: column;
+}
+.home-link03 {
+  margin-bottom: var(--dl-space-space-unit);
+  text-decoration: none;
 }
 .home-link04 {
   margin-bottom: var(--dl-space-space-unit);
   text-decoration: none;
 }
 .home-link05 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.home-link06 {
-  margin-bottom: var(--dl-space-space-unit);
-  text-decoration: none;
-}
-.home-link07 {
   margin-bottom: var(--dl-space-space-unit);
   text-decoration: none;
 }
@@ -313,16 +258,16 @@
   text-align: justify;
   font-family: Raleway;
 }
+.home-link06 {
+  text-decoration: underline;
+}
+.home-link07 {
+  text-decoration: underline;
+}
 .home-link08 {
   text-decoration: underline;
 }
 .home-link09 {
-  text-decoration: underline;
-}
-.home-link10 {
-  text-decoration: underline;
-}
-.home-link11 {
   text-decoration: underline;
 }
 .home-contact {
@@ -399,30 +344,9 @@
   align-self: stretch;
   object-fit: cover;
 }
-.home-gallery {
-  flex: 0 0 auto;
-  width: 100%;
-  display: flex;
-  align-items: flex-start;
-  padding-left: var(--dl-space-space-threeunits);
-  padding-right: var(--dl-space-space-threeunits);
-  flex-direction: column;
-  justify-content: center;
-}
-.home-container8 {
-  width: 100%;
-  display: grid;
-  grid-gap: var(--dl-space-space-unit);
-  margin-top: var(--dl-space-space-twounits);
-  margin-bottom: var(--dl-space-space-twounits);
-  grid-template-columns: 1fr 1fr 1fr;
-}
 @media(max-width: 991px) {
   .home-container5 {
     flex-direction: column;
-  }
-  .home-container8 {
-    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 @media(max-width: 767px) {
@@ -454,27 +378,19 @@
   .home-links1 {
     padding-top: var(--dl-space-space-twounits);
   }
+  .home-link03 {
+    font-size: 12px;
+    font-family: Avenir LT Std 45 Book;
+    margin-bottom: var(--dl-space-space-unit);
+    text-transform: uppercase;
+  }
   .home-link04 {
     font-size: 12px;
-    font-family: Avenir LT Std 45 Book;
+    margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
-    text-transform: uppercase;
+    text-decoration: none;
   }
   .home-link05 {
-    font-size: 12px;
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-    text-decoration: none;
-  }
-  .home-link06 {
-    font-size: 12px;
-    font-family: Avenir LT Std 45 Book;
-    margin-left: 0;
-    margin-bottom: var(--dl-space-space-unit);
-    text-transform: uppercase;
-    text-decoration: none;
-  }
-  .home-link07 {
     font-size: 12px;
     font-family: Avenir LT Std 45 Book;
     margin-left: 0;
@@ -494,9 +410,6 @@
   }
   .home-container5 {
     order: 2;
-  }
-  .home-container8 {
-    grid-template-columns: 1fr 1fr;
   }
 }
 @media(max-width: 479px) {
@@ -547,8 +460,5 @@
   }
   .home-container7 {
     order: 2;
-  }
-  .home-container8 {
-    grid-template-columns: 1fr;
   }
 }
